--- a/weather/src/main/resources/application.properties
+++ b/weather/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+server.port=9006
+server.servlet.context-path=/weather
+spring.mvc.servlet.path=/rest
